# FoReco

./: README.md  setup.cfg
FoReco/: htsrec.py  reco.py  thfrec.py  tools.py
FoReco/FoReco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
