[metadata]
name = FoReco
version = 0.0.1
author = Alberto Maronilli
author_email = alberto.maronilli@gmail.com
description = A package for hierarchical grouped and temporal reconciliacion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = FoReco
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	osqp

[options.packages.find]
where = FoReco